# guizhong

./: .gitignore  Jenkinsfile  README.md  SETUP.md  guizhong.sample.service  main.py  pyproject.toml  requirements.txt  sample.env
.github/workflows/: test.yml
docs/: SETUP.md
src/: bot.py  errors.py  handler.py  session.py  song.py  utils.py
tests/: test_bot.py  test_handler.py  test_song.py  test_utils.py
